@@ -63,6 +63,7 @@ against datetimes that dont).
 - fix to using query.count() with distinct, **kwargs with SelectResults
 count() [ticket:287]
 - deregister Table from MetaData when autoload fails; [ticket:289]
+- import of py2.5s sqlite3 [ticket:293]
 
 0.2.7
 - quoting facilities set up so that database-specific quoting can be
